[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/tourelle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Case_vide.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/map/map_1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 157.312, -34.7334, 0, 0, 0, 0, 156.595, 145.68, 0, 0, 0, 0, 753.665, 143.427, 0, 0, 0, 0, 753.699, 344.496, 0, 0, 0, 0, 355.971, 345.7, 0, 0, 0, 0, 355.458, 646.52, 0, 0, 0, 0, 553.172, 646.406, 0, 0, 0, 0, 553.26, 547.148, 0, 0, 0, 0, 1238.47, 546.973 )
}
_sections_unfolded = [ "Resource" ]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )
tourelle = ExtResource( 3 )
Case_vide = ExtResource( 4 )

[node name="Sprite_map" type="Sprite" parent="." index="0"]

position = Vector2( 0, -5.16943 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Path2D_chemin_mob" type="Path2D" parent="." index="1"]

position = Vector2( -7.52615, 2.92682 )
curve = SubResource( 1 )

[node name="TimerPopMob" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="Player" parent="." index="3" instance=ExtResource( 6 )]

[connection signal="timeout" from="TimerPopMob" to="." method="_on_TimerPopMob_timeout"]

[connection signal="boutton_t1" from="Player" to="." method="_on_Player_boutton_t1"]

[connection signal="boutton_t2" from="Player" to="." method="_on_Player_boutton_t2"]

[connection signal="boutton_t3" from="Player" to="." method="_on_Player_boutton_t3"]


